chore(ci): use new syntax of cambpmConditionalRetry to run agent
Related to: INFRA-2114

--- a/.ci/daily/Jenkinsfile
+++ b/.ci/daily/Jenkinsfile
@@ -5,7 +5,11 @@
 def failedStageTypes = []
 
 pipeline {
-  agent none
+  agent {
+    node {
+      label 'jenkins-job-runner'
+    }
+  }
   parameters {
     booleanParam name: 'STANDALONE', defaultValue: true
     booleanParam name: 'UPSTREAM_PR', defaultValue: false, description: 'Is the current build triggered in the scope of an upstream pull request'
@@ -25,13 +29,9 @@ pipeline {
         expression {
           !cambpmWithLabels('standalone')
         }
-        beforeAgent true
-      }
-      agent {
-        label 'centos-stable'
       }
       steps {
-        cambpmConditionalRetry {
+        cambpmConditionalRetry(agentLabel: 'centos-stable') {
           cambpmCopyArtifacts(params.UPSTREAM_PROJECT_NAME, params.UPSTREAM_BUILD_NUMBER)
           cambpmStash("platform-stash-runtime",
                       ".m2/org/camunda/**/*-SNAPSHOT/**",
@@ -43,11 +43,8 @@ pipeline {
       }
     }
     stage('check-sql-scripts') {
-      agent {
-        label 'centos-stable'
-      }
       steps {
-        cambpmConditionalRetry {
+        cambpmConditionalRetry(agentLabel: 'centos-stable') {
           sh '.ci/scripts/check-sql-scripts.sh'
         }
       }
@@ -59,13 +56,9 @@ pipeline {
             expression {
               cambpmWithLabels('h2', 'all-db')
             }
-            beforeAgent true
-          }
-          agent {
-            label 'h2'
-          }
+              }
           steps {
-            cambpmConditionalRetry {
+            cambpmConditionalRetry(agentLabel: 'h2') {
               cambpmRunMavenByStageType('sql-scripts', 'h2')
             }
           }
@@ -78,13 +71,9 @@ pipeline {
         stage('wildfly-subsystem-UNIT-wildfly') {
           when {
             branch cambpmDefaultBranch();
-            beforeAgent true
-          }
-          agent {
-            label 'h2'
-          }
+              }
           steps {
-            cambpmConditionalRetry {
+            cambpmConditionalRetry(agentLabel: 'h2') {
               cambpmRunMaven('distro/wildfly/subsystem', 'test', runtimeStash: true)
             }
           }
@@ -99,13 +88,9 @@ pipeline {
             expression {
               cambpmWithLabels('h2', 'all-db')
             }
-            beforeAgent true
-          }
-          agent {
-            label 'h2'
-          }
+              }
           steps {
-            cambpmConditionalRetry {
+            cambpmConditionalRetry(agentLabel: 'h2') {
               cambpmRunMavenByStageType('upgrade-database', 'h2')
             }
           }
@@ -123,13 +108,9 @@ pipeline {
             expression {
               cambpmWithLabels('default-build', 'migration')
             }
-            beforeAgent true
-          }
-          agent {
-            label 'h2'
-          }
+              }
           steps {
-            cambpmConditionalRetry {
+            cambpmConditionalRetry(agentLabel: 'h2') {
               cambpmRunMavenByStageType('instance-migration', 'h2')
             }
           }
@@ -147,13 +128,9 @@ pipeline {
             expression {
               cambpmWithLabels('h2', 'all-db')
             }
-            beforeAgent true
-          }
-          agent {
-            label 'h2'
-          }
+              }
           steps {
-            cambpmConditionalRetry {
+            cambpmConditionalRetry(agentLabel: 'h2') {
               cambpmRunMavenByStageType('old-engine', 'h2')
             }
           }
@@ -171,13 +148,9 @@ pipeline {
             expression {
               cambpmWithLabels('rolling-update', 'default-build')
             }
-            beforeAgent true
-          }
-          agent {
-            label 'h2'
-          }
+              }
           steps {
-            cambpmConditionalRetry {
+            cambpmConditionalRetry(agentLabel: 'h2') {
               cambpmRunMavenByStageType('rolling-update', 'h2')
             }
           }
@@ -193,13 +166,9 @@ pipeline {
         stage('PERFORMANCE-large-data-h2') {
           when {
             branch cambpmDefaultBranch();
-            beforeAgent true
-          }
-          agent {
-            label 'h2'
-          }
+              }
           steps {
-            cambpmConditionalRetry {
+            cambpmConditionalRetry(agentLabel: 'h2') {
               cambpmRunMavenByStageType('large-data-tests', 'h2')
             }
           }
@@ -215,9 +184,6 @@ pipeline {
       }
     }
     stage('QA DB tests') {
-      agent {
-        label 'centos'
-      }
       steps {
         script {
           parallel(cambpmGetMatrixStages('daily-stages', failedStageTypes, { allowedStageLabels, dbLabel ->
@@ -240,15 +206,11 @@ pipeline {
           expression {
             cambpmWithLabels('default-build')
           }
-          beforeAgent true
-        }
-        agent {
-          label 'h2'
-        }
+          }
         stages {
           stage('JDK') {
             steps {
-              cambpmConditionalRetry {
+              cambpmConditionalRetry(agentLabel: 'h2') {
                 cambpmRunMaven('.',
                     'install source:jar source:test-jar -pl \'!webapps\',\'!distro/jbossas7/subsystem\' -Pdistro,distro-ce,distro-wildfly',
                     jdkVersion: env.JDK,
@@ -270,13 +232,6 @@ pipeline {
       script {
         if (!agentDisconnected()){
           cambpmSendEmailNotification()
-        }
-      }
-    }
-    always {
-      script {
-        if (agentDisconnected()) {// Retrigger the build if the slave disconnected
-          build job: currentBuild.projectName, propagate: false, quietPeriod: 60, wait: false
         }
       }
     }
